Code/calc.output
Terminals unused in grammar

   '-'


State 5 conflicts: 1 shift/reduce
State 17 conflicts: 5 shift/reduce
State 18 conflicts: 5 shift/reduce
State 39 conflicts: 5 shift/reduce
State 40 conflicts: 5 shift/reduce
State 41 conflicts: 1 shift/reduce
State 42 conflicts: 1 shift/reduce
State 43 conflicts: 1 shift/reduce
State 44 conflicts: 1 shift/reduce
State 45 conflicts: 1 shift/reduce
State 46 conflicts: 1 shift/reduce
State 47 conflicts: 1 shift/reduce
State 48 conflicts: 1 shift/reduce
State 49 conflicts: 5 shift/reduce
State 50 conflicts: 5 shift/reduce
State 51 conflicts: 1 shift/reduce
State 52 conflicts: 1 shift/reduce
State 53 conflicts: 1 shift/reduce
State 54 conflicts: 1 shift/reduce
State 55 conflicts: 1 shift/reduce
State 56 conflicts: 1 shift/reduce
State 57 conflicts: 1 shift/reduce
State 58 conflicts: 1 shift/reduce
State 63 conflicts: 5 shift/reduce
State 70 conflicts: 5 shift/reduce
State 71 conflicts: 1 shift/reduce
State 72 conflicts: 1 shift/reduce
State 73 conflicts: 1 shift/reduce
State 74 conflicts: 1 shift/reduce


Grammar

    0 $accept: program_input $end

    1 program_input: %empty
    2              | program_input line

    3 line: NEWLINE
    4     | prevValue NEWLINE
    5     | calculation NEWLINE
    6     | PREV_VAL NEWLINE
    7     | QUIT NEWLINE

    8 calculation: expr
    9            | assignment

   10 expr: SUB expr
   11     | NUMBER
   12     | VARIABLE
   13     | '(' expr ')'
   14     | expr '/' expr
   15     | expr '*' expr
   16     | expr '+' expr
   17     | expr SUB expr
   18     | expr '^' expr

   19 prevValue: PREV_VAL
   20          | SUB prevValue
   21          | prevValue '/' expr
   22          | prevValue '*' expr
   23          | prevValue '+' expr
   24          | prevValue SUB expr
   25          | prevValue '^' expr
   26          | expr '/' prevValue
   27          | expr '*' prevValue
   28          | expr '+' prevValue
   29          | expr SUB prevValue
   30          | expr '^' prevValue
   31          | prevValue '/' prevValue
   32          | prevValue '*' prevValue
   33          | prevValue '+' prevValue
   34          | prevValue SUB prevValue
   35          | prevValue '^' prevValue
   36          | '(' prevValue ')'

   37 assignment: VAR_KEYWORD VARIABLE '=' calculation


Terminals, with rules where they appear

$end (0) 0
'(' (40) 13 36
')' (41) 13 36
'*' (42) 15 22 27 32
'+' (43) 16 23 28 33
'-' (45)
'/' (47) 14 21 26 31
'=' (61) 37
'^' (94) 18 25 30 35
error (256)
NUMBER (258) 11
SUB (259) 10 17 20 24 29 34
PREV_VAL (260) 6 19
VARIABLE (261) 12 37
VAR_KEYWORD (262) 37
QUIT (263) 7
NEWLINE (264) 3 4 5 6 7


Nonterminals, with rules where they appear

$accept (18)
    on left: 0
program_input (19)
    on left: 1 2, on right: 0 2
line (20)
    on left: 3 4 5 6 7, on right: 2
calculation (21)
    on left: 8 9, on right: 5 37
expr (22)
    on left: 10 11 12 13 14 15 16 17 18, on right: 8 10 13 14 15 16
    17 18 21 22 23 24 25 26 27 28 29 30
prevValue (23)
    on left: 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36,
    on right: 4 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36
assignment (24)
    on left: 37, on right: 9


State 0

    0 $accept: . program_input $end

    $default  reduce using rule 1 (program_input)

    program_input  go to state 1


State 1

    0 $accept: program_input . $end
    2 program_input: program_input . line

    $end         shift, and go to state 2
    NUMBER       shift, and go to state 3
    SUB          shift, and go to state 4
    PREV_VAL     shift, and go to state 5
    VARIABLE     shift, and go to state 6
    VAR_KEYWORD  shift, and go to state 7
    QUIT         shift, and go to state 8
    NEWLINE      shift, and go to state 9
    '('          shift, and go to state 10

    line         go to state 11
    calculation  go to state 12
    expr         go to state 13
    prevValue    go to state 14
    assignment   go to state 15


State 2

    0 $accept: program_input $end .

    $default  accept


State 3

   11 expr: NUMBER .

    $default  reduce using rule 11 (expr)


State 4

   10 expr: SUB . expr
   20 prevValue: SUB . prevValue

    NUMBER    shift, and go to state 3
    SUB       shift, and go to state 4
    PREV_VAL  shift, and go to state 16
    VARIABLE  shift, and go to state 6
    '('       shift, and go to state 10

    expr       go to state 17
    prevValue  go to state 18


State 5

    6 line: PREV_VAL . NEWLINE
   19 prevValue: PREV_VAL .

    NEWLINE  shift, and go to state 19

    NEWLINE   [reduce using rule 19 (prevValue)]
    $default  reduce using rule 19 (prevValue)


State 6

   12 expr: VARIABLE .

    $default  reduce using rule 12 (expr)


State 7

   37 assignment: VAR_KEYWORD . VARIABLE '=' calculation

    VARIABLE  shift, and go to state 20


State 8

    7 line: QUIT . NEWLINE

    NEWLINE  shift, and go to state 21


State 9

    3 line: NEWLINE .

    $default  reduce using rule 3 (line)


State 10

   13 expr: '(' . expr ')'
   36 prevValue: '(' . prevValue ')'

    NUMBER    shift, and go to state 3
    SUB       shift, and go to state 4
    PREV_VAL  shift, and go to state 16
    VARIABLE  shift, and go to state 6
    '('       shift, and go to state 10

    expr       go to state 22
    prevValue  go to state 23


State 11

    2 program_input: program_input line .

    $default  reduce using rule 2 (program_input)


State 12

    5 line: calculation . NEWLINE

    NEWLINE  shift, and go to state 24


State 13

    8 calculation: expr .
   14 expr: expr . '/' expr
   15     | expr . '*' expr
   16     | expr . '+' expr
   17     | expr . SUB expr
   18     | expr . '^' expr
   26 prevValue: expr . '/' prevValue
   27          | expr . '*' prevValue
   28          | expr . '+' prevValue
   29          | expr . SUB prevValue
   30          | expr . '^' prevValue

    SUB  shift, and go to state 25
    '+'  shift, and go to state 26
    '*'  shift, and go to state 27
    '/'  shift, and go to state 28
    '^'  shift, and go to state 29

    $default  reduce using rule 8 (calculation)


State 14

    4 line: prevValue . NEWLINE
   21 prevValue: prevValue . '/' expr
   22          | prevValue . '*' expr
   23          | prevValue . '+' expr
   24          | prevValue . SUB expr
   25          | prevValue . '^' expr
   31          | prevValue . '/' prevValue
   32          | prevValue . '*' prevValue
   33          | prevValue . '+' prevValue
   34          | prevValue . SUB prevValue
   35          | prevValue . '^' prevValue

    SUB      shift, and go to state 30
    NEWLINE  shift, and go to state 31
    '+'      shift, and go to state 32
    '*'      shift, and go to state 33
    '/'      shift, and go to state 34
    '^'      shift, and go to state 35


State 15

    9 calculation: assignment .

    $default  reduce using rule 9 (calculation)


State 16

   19 prevValue: PREV_VAL .

    $default  reduce using rule 19 (prevValue)


State 17

   10 expr: SUB expr .
   14     | expr . '/' expr
   15     | expr . '*' expr
   16     | expr . '+' expr
   17     | expr . SUB expr
   18     | expr . '^' expr
   26 prevValue: expr . '/' prevValue
   27          | expr . '*' prevValue
   28          | expr . '+' prevValue
   29          | expr . SUB prevValue
   30          | expr . '^' prevValue

    SUB  shift, and go to state 25
    '+'  shift, and go to state 26
    '*'  shift, and go to state 27
    '/'  shift, and go to state 28
    '^'  shift, and go to state 29

    SUB       [reduce using rule 10 (expr)]
    '+'       [reduce using rule 10 (expr)]
    '*'       [reduce using rule 10 (expr)]
    '/'       [reduce using rule 10 (expr)]
    '^'       [reduce using rule 10 (expr)]
    $default  reduce using rule 10 (expr)


State 18

   20 prevValue: SUB prevValue .
   21          | prevValue . '/' expr
   22          | prevValue . '*' expr
   23          | prevValue . '+' expr
   24          | prevValue . SUB expr
   25          | prevValue . '^' expr
   31          | prevValue . '/' prevValue
   32          | prevValue . '*' prevValue
   33          | prevValue . '+' prevValue
   34          | prevValue . SUB prevValue
   35          | prevValue . '^' prevValue

    SUB  shift, and go to state 30
    '+'  shift, and go to state 32
    '*'  shift, and go to state 33
    '/'  shift, and go to state 34
    '^'  shift, and go to state 35

    SUB       [reduce using rule 20 (prevValue)]
    '+'       [reduce using rule 20 (prevValue)]
    '*'       [reduce using rule 20 (prevValue)]
    '/'       [reduce using rule 20 (prevValue)]
    '^'       [reduce using rule 20 (prevValue)]
    $default  reduce using rule 20 (prevValue)


State 19

    6 line: PREV_VAL NEWLINE .

    $default  reduce using rule 6 (line)


State 20

   37 assignment: VAR_KEYWORD VARIABLE . '=' calculation

    '='  shift, and go to state 36


State 21

    7 line: QUIT NEWLINE .

    $default  reduce using rule 7 (line)


State 22

   13 expr: '(' expr . ')'
   14     | expr . '/' expr
   15     | expr . '*' expr
   16     | expr . '+' expr
   17     | expr . SUB expr
   18     | expr . '^' expr
   26 prevValue: expr . '/' prevValue
   27          | expr . '*' prevValue
   28          | expr . '+' prevValue
   29          | expr . SUB prevValue
   30          | expr . '^' prevValue

    SUB  shift, and go to state 25
    '+'  shift, and go to state 26
    '*'  shift, and go to state 27
    '/'  shift, and go to state 28
    '^'  shift, and go to state 29
    ')'  shift, and go to state 37


State 23

   21 prevValue: prevValue . '/' expr
   22          | prevValue . '*' expr
   23          | prevValue . '+' expr
   24          | prevValue . SUB expr
   25          | prevValue . '^' expr
   31          | prevValue . '/' prevValue
   32          | prevValue . '*' prevValue
   33          | prevValue . '+' prevValue
   34          | prevValue . SUB prevValue
   35          | prevValue . '^' prevValue
   36          | '(' prevValue . ')'

    SUB  shift, and go to state 30
    '+'  shift, and go to state 32
    '*'  shift, and go to state 33
    '/'  shift, and go to state 34
    '^'  shift, and go to state 35
    ')'  shift, and go to state 38


State 24

    5 line: calculation NEWLINE .

    $default  reduce using rule 5 (line)


State 25

   17 expr: expr SUB . expr
   29 prevValue: expr SUB . prevValue

    NUMBER    shift, and go to state 3
    SUB       shift, and go to state 4
    PREV_VAL  shift, and go to state 16
    VARIABLE  shift, and go to state 6
    '('       shift, and go to state 10

    expr       go to state 39
    prevValue  go to state 40


State 26

   16 expr: expr '+' . expr
   28 prevValue: expr '+' . prevValue

    NUMBER    shift, and go to state 3
    SUB       shift, and go to state 4
    PREV_VAL  shift, and go to state 16
    VARIABLE  shift, and go to state 6
    '('       shift, and go to state 10

    expr       go to state 41
    prevValue  go to state 42


State 27

   15 expr: expr '*' . expr
   27 prevValue: expr '*' . prevValue

    NUMBER    shift, and go to state 3
    SUB       shift, and go to state 4
    PREV_VAL  shift, and go to state 16
    VARIABLE  shift, and go to state 6
    '('       shift, and go to state 10

    expr       go to state 43
    prevValue  go to state 44


State 28

   14 expr: expr '/' . expr
   26 prevValue: expr '/' . prevValue

    NUMBER    shift, and go to state 3
    SUB       shift, and go to state 4
    PREV_VAL  shift, and go to state 16
    VARIABLE  shift, and go to state 6
    '('       shift, and go to state 10

    expr       go to state 45
    prevValue  go to state 46


State 29

   18 expr: expr '^' . expr
   30 prevValue: expr '^' . prevValue

    NUMBER    shift, and go to state 3
    SUB       shift, and go to state 4
    PREV_VAL  shift, and go to state 16
    VARIABLE  shift, and go to state 6
    '('       shift, and go to state 10

    expr       go to state 47
    prevValue  go to state 48


State 30

   24 prevValue: prevValue SUB . expr
   34          | prevValue SUB . prevValue

    NUMBER    shift, and go to state 3
    SUB       shift, and go to state 4
    PREV_VAL  shift, and go to state 16
    VARIABLE  shift, and go to state 6
    '('       shift, and go to state 10

    expr       go to state 49
    prevValue  go to state 50


State 31

    4 line: prevValue NEWLINE .

    $default  reduce using rule 4 (line)


State 32

   23 prevValue: prevValue '+' . expr
   33          | prevValue '+' . prevValue

    NUMBER    shift, and go to state 3
    SUB       shift, and go to state 4
    PREV_VAL  shift, and go to state 16
    VARIABLE  shift, and go to state 6
    '('       shift, and go to state 10

    expr       go to state 51
    prevValue  go to state 52


State 33

   22 prevValue: prevValue '*' . expr
   32          | prevValue '*' . prevValue

    NUMBER    shift, and go to state 3
    SUB       shift, and go to state 4
    PREV_VAL  shift, and go to state 16
    VARIABLE  shift, and go to state 6
    '('       shift, and go to state 10

    expr       go to state 53
    prevValue  go to state 54


State 34

   21 prevValue: prevValue '/' . expr
   31          | prevValue '/' . prevValue

    NUMBER    shift, and go to state 3
    SUB       shift, and go to state 4
    PREV_VAL  shift, and go to state 16
    VARIABLE  shift, and go to state 6
    '('       shift, and go to state 10

    expr       go to state 55
    prevValue  go to state 56


State 35

   25 prevValue: prevValue '^' . expr
   35          | prevValue '^' . prevValue

    NUMBER    shift, and go to state 3
    SUB       shift, and go to state 4
    PREV_VAL  shift, and go to state 16
    VARIABLE  shift, and go to state 6
    '('       shift, and go to state 10

    expr       go to state 57
    prevValue  go to state 58


State 36

   37 assignment: VAR_KEYWORD VARIABLE '=' . calculation

    NUMBER       shift, and go to state 3
    SUB          shift, and go to state 59
    VARIABLE     shift, and go to state 6
    VAR_KEYWORD  shift, and go to state 7
    '('          shift, and go to state 60

    calculation  go to state 61
    expr         go to state 62
    assignment   go to state 15


State 37

   13 expr: '(' expr ')' .

    $default  reduce using rule 13 (expr)


State 38

   36 prevValue: '(' prevValue ')' .

    $default  reduce using rule 36 (prevValue)


State 39

   14 expr: expr . '/' expr
   15     | expr . '*' expr
   16     | expr . '+' expr
   17     | expr . SUB expr
   17     | expr SUB expr .
   18     | expr . '^' expr
   26 prevValue: expr . '/' prevValue
   27          | expr . '*' prevValue
   28          | expr . '+' prevValue
   29          | expr . SUB prevValue
   30          | expr . '^' prevValue

    SUB  shift, and go to state 25
    '+'  shift, and go to state 26
    '*'  shift, and go to state 27
    '/'  shift, and go to state 28
    '^'  shift, and go to state 29

    SUB       [reduce using rule 17 (expr)]
    '+'       [reduce using rule 17 (expr)]
    '*'       [reduce using rule 17 (expr)]
    '/'       [reduce using rule 17 (expr)]
    '^'       [reduce using rule 17 (expr)]
    $default  reduce using rule 17 (expr)


State 40

   21 prevValue: prevValue . '/' expr
   22          | prevValue . '*' expr
   23          | prevValue . '+' expr
   24          | prevValue . SUB expr
   25          | prevValue . '^' expr
   29          | expr SUB prevValue .
   31          | prevValue . '/' prevValue
   32          | prevValue . '*' prevValue
   33          | prevValue . '+' prevValue
   34          | prevValue . SUB prevValue
   35          | prevValue . '^' prevValue

    SUB  shift, and go to state 30
    '+'  shift, and go to state 32
    '*'  shift, and go to state 33
    '/'  shift, and go to state 34
    '^'  shift, and go to state 35

    SUB       [reduce using rule 29 (prevValue)]
    '+'       [reduce using rule 29 (prevValue)]
    '*'       [reduce using rule 29 (prevValue)]
    '/'       [reduce using rule 29 (prevValue)]
    '^'       [reduce using rule 29 (prevValue)]
    $default  reduce using rule 29 (prevValue)


State 41

   14 expr: expr . '/' expr
   15     | expr . '*' expr
   16     | expr . '+' expr
   16     | expr '+' expr .
   17     | expr . SUB expr
   18     | expr . '^' expr
   26 prevValue: expr . '/' prevValue
   27          | expr . '*' prevValue
   28          | expr . '+' prevValue
   29          | expr . SUB prevValue
   30          | expr . '^' prevValue

    SUB  shift, and go to state 25
    '*'  shift, and go to state 27
    '/'  shift, and go to state 28
    '^'  shift, and go to state 29

    SUB       [reduce using rule 16 (expr)]
    $default  reduce using rule 16 (expr)


State 42

   21 prevValue: prevValue . '/' expr
   22          | prevValue . '*' expr
   23          | prevValue . '+' expr
   24          | prevValue . SUB expr
   25          | prevValue . '^' expr
   28          | expr '+' prevValue .
   31          | prevValue . '/' prevValue
   32          | prevValue . '*' prevValue
   33          | prevValue . '+' prevValue
   34          | prevValue . SUB prevValue
   35          | prevValue . '^' prevValue

    SUB  shift, and go to state 30
    '*'  shift, and go to state 33
    '/'  shift, and go to state 34
    '^'  shift, and go to state 35

    SUB       [reduce using rule 28 (prevValue)]
    $default  reduce using rule 28 (prevValue)


State 43

   14 expr: expr . '/' expr
   15     | expr . '*' expr
   15     | expr '*' expr .
   16     | expr . '+' expr
   17     | expr . SUB expr
   18     | expr . '^' expr
   26 prevValue: expr . '/' prevValue
   27          | expr . '*' prevValue
   28          | expr . '+' prevValue
   29          | expr . SUB prevValue
   30          | expr . '^' prevValue

    SUB  shift, and go to state 25
    '^'  shift, and go to state 29

    SUB       [reduce using rule 15 (expr)]
    $default  reduce using rule 15 (expr)


State 44

   21 prevValue: prevValue . '/' expr
   22          | prevValue . '*' expr
   23          | prevValue . '+' expr
   24          | prevValue . SUB expr
   25          | prevValue . '^' expr
   27          | expr '*' prevValue .
   31          | prevValue . '/' prevValue
   32          | prevValue . '*' prevValue
   33          | prevValue . '+' prevValue
   34          | prevValue . SUB prevValue
   35          | prevValue . '^' prevValue

    SUB  shift, and go to state 30
    '^'  shift, and go to state 35

    SUB       [reduce using rule 27 (prevValue)]
    $default  reduce using rule 27 (prevValue)


State 45

   14 expr: expr . '/' expr
   14     | expr '/' expr .
   15     | expr . '*' expr
   16     | expr . '+' expr
   17     | expr . SUB expr
   18     | expr . '^' expr
   26 prevValue: expr . '/' prevValue
   27          | expr . '*' prevValue
   28          | expr . '+' prevValue
   29          | expr . SUB prevValue
   30          | expr . '^' prevValue

    SUB  shift, and go to state 25
    '^'  shift, and go to state 29

    SUB       [reduce using rule 14 (expr)]
    $default  reduce using rule 14 (expr)


State 46

   21 prevValue: prevValue . '/' expr
   22          | prevValue . '*' expr
   23          | prevValue . '+' expr
   24          | prevValue . SUB expr
   25          | prevValue . '^' expr
   26          | expr '/' prevValue .
   31          | prevValue . '/' prevValue
   32          | prevValue . '*' prevValue
   33          | prevValue . '+' prevValue
   34          | prevValue . SUB prevValue
   35          | prevValue . '^' prevValue

    SUB  shift, and go to state 30
    '^'  shift, and go to state 35

    SUB       [reduce using rule 26 (prevValue)]
    $default  reduce using rule 26 (prevValue)


State 47

   14 expr: expr . '/' expr
   15     | expr . '*' expr
   16     | expr . '+' expr
   17     | expr . SUB expr
   18     | expr . '^' expr
   18     | expr '^' expr .
   26 prevValue: expr . '/' prevValue
   27          | expr . '*' prevValue
   28          | expr . '+' prevValue
   29          | expr . SUB prevValue
   30          | expr . '^' prevValue

    SUB  shift, and go to state 25

    SUB       [reduce using rule 18 (expr)]
    $default  reduce using rule 18 (expr)


State 48

   21 prevValue: prevValue . '/' expr
   22          | prevValue . '*' expr
   23          | prevValue . '+' expr
   24          | prevValue . SUB expr
   25          | prevValue . '^' expr
   30          | expr '^' prevValue .
   31          | prevValue . '/' prevValue
   32          | prevValue . '*' prevValue
   33          | prevValue . '+' prevValue
   34          | prevValue . SUB prevValue
   35          | prevValue . '^' prevValue

    SUB  shift, and go to state 30

    SUB       [reduce using rule 30 (prevValue)]
    $default  reduce using rule 30 (prevValue)


State 49

   14 expr: expr . '/' expr
   15     | expr . '*' expr
   16     | expr . '+' expr
   17     | expr . SUB expr
   18     | expr . '^' expr
   24 prevValue: prevValue SUB expr .
   26          | expr . '/' prevValue
   27          | expr . '*' prevValue
   28          | expr . '+' prevValue
   29          | expr . SUB prevValue
   30          | expr . '^' prevValue

    SUB  shift, and go to state 25
    '+'  shift, and go to state 26
    '*'  shift, and go to state 27
    '/'  shift, and go to state 28
    '^'  shift, and go to state 29

    SUB       [reduce using rule 24 (prevValue)]
    '+'       [reduce using rule 24 (prevValue)]
    '*'       [reduce using rule 24 (prevValue)]
    '/'       [reduce using rule 24 (prevValue)]
    '^'       [reduce using rule 24 (prevValue)]
    $default  reduce using rule 24 (prevValue)


State 50

   21 prevValue: prevValue . '/' expr
   22          | prevValue . '*' expr
   23          | prevValue . '+' expr
   24          | prevValue . SUB expr
   25          | prevValue . '^' expr
   31          | prevValue . '/' prevValue
   32          | prevValue . '*' prevValue
   33          | prevValue . '+' prevValue
   34          | prevValue . SUB prevValue
   34          | prevValue SUB prevValue .
   35          | prevValue . '^' prevValue

    SUB  shift, and go to state 30
    '+'  shift, and go to state 32
    '*'  shift, and go to state 33
    '/'  shift, and go to state 34
    '^'  shift, and go to state 35

    SUB       [reduce using rule 34 (prevValue)]
    '+'       [reduce using rule 34 (prevValue)]
    '*'       [reduce using rule 34 (prevValue)]
    '/'       [reduce using rule 34 (prevValue)]
    '^'       [reduce using rule 34 (prevValue)]
    $default  reduce using rule 34 (prevValue)


State 51

   14 expr: expr . '/' expr
   15     | expr . '*' expr
   16     | expr . '+' expr
   17     | expr . SUB expr
   18     | expr . '^' expr
   23 prevValue: prevValue '+' expr .
   26          | expr . '/' prevValue
   27          | expr . '*' prevValue
   28          | expr . '+' prevValue
   29          | expr . SUB prevValue
   30          | expr . '^' prevValue

    SUB  shift, and go to state 25
    '*'  shift, and go to state 27
    '/'  shift, and go to state 28
    '^'  shift, and go to state 29

    SUB       [reduce using rule 23 (prevValue)]
    $default  reduce using rule 23 (prevValue)


State 52

   21 prevValue: prevValue . '/' expr
   22          | prevValue . '*' expr
   23          | prevValue . '+' expr
   24          | prevValue . SUB expr
   25          | prevValue . '^' expr
   31          | prevValue . '/' prevValue
   32          | prevValue . '*' prevValue
   33          | prevValue . '+' prevValue
   33          | prevValue '+' prevValue .
   34          | prevValue . SUB prevValue
   35          | prevValue . '^' prevValue

    SUB  shift, and go to state 30
    '*'  shift, and go to state 33
    '/'  shift, and go to state 34
    '^'  shift, and go to state 35

    SUB       [reduce using rule 33 (prevValue)]
    $default  reduce using rule 33 (prevValue)


State 53

   14 expr: expr . '/' expr
   15     | expr . '*' expr
   16     | expr . '+' expr
   17     | expr . SUB expr
   18     | expr . '^' expr
   22 prevValue: prevValue '*' expr .
   26          | expr . '/' prevValue
   27          | expr . '*' prevValue
   28          | expr . '+' prevValue
   29          | expr . SUB prevValue
   30          | expr . '^' prevValue

    SUB  shift, and go to state 25
    '^'  shift, and go to state 29

    SUB       [reduce using rule 22 (prevValue)]
    $default  reduce using rule 22 (prevValue)


State 54

   21 prevValue: prevValue . '/' expr
   22          | prevValue . '*' expr
   23          | prevValue . '+' expr
   24          | prevValue . SUB expr
   25          | prevValue . '^' expr
   31          | prevValue . '/' prevValue
   32          | prevValue . '*' prevValue
   32          | prevValue '*' prevValue .
   33          | prevValue . '+' prevValue
   34          | prevValue . SUB prevValue
   35          | prevValue . '^' prevValue

    SUB  shift, and go to state 30
    '^'  shift, and go to state 35

    SUB       [reduce using rule 32 (prevValue)]
    $default  reduce using rule 32 (prevValue)


State 55
